# PVA

./: README.md
PVA_P0/: P0_A2  P0_A2.cpp  P0_A3  P0_A3.cpp  P1.cpp
PVA_P0 (Wiederholung C++)/: P0_A1  P0_A1.cpp  P0_A2.cpp  P0_A3.cpp
PVA_P1 (Präfix-Algorithmus)/: CMakeLists.txt  KarlMay_Karl.May.-.Bd.14.-.Old.Surehand.I.epub  Readme.md  main_gewinn.cpp  main_parallel.cpp  main_sequentiell.cpp  test.txt
PVA_P2 (Dijkstra)/: CMakeLists.txt
PVA_P2 (Dijkstra)/src/: main.cpp
PVA_P3 (Dijkstra)/: CMakeLists.txt  Dijkstra.cpp  Readme.md
PVA_P3 (Langford oneAPI)/: CMakeLists.txt
PVA_P3 (Langford oneAPI)/src/: main  main.cpp
PVA_P4(Langford OpenMP)/: CMakeLists.txt
PVA_P4(Langford OpenMP)/src/: main  main.cpp
